--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chart.js": "^4.2.1",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "exceljs": "^4.3.0",
@@ -25,7 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "^6.9.7",
     "pdfkit": "^0.13.0",
     "razorpay": "^2.8.4",
     "validator": "^13.7.0"
